# wadjet_v2

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  FULL_AUDIT_PROMPT.md  JOURNEY.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  wadjet-deck.html
alembic/: env.py
app/: __init__.py  config.py  dependencies.py  main.py  rate_limit.py
archive/: README.md
comprehensive-upgrade/: 02_PHASE_PROMPTS.md  04_AUTH_PLAN.md  07_STORIES_ENRICHMENT_PLAN.md  08_TESTING_PLAN.md  09_CREDENTIALS_AND_SETUP_CHECKLIST.md
data/: expanded_sites.json  landmark_enrichment_cache.json
planning/: CONSTITUTION.md  CONTINUATION_PROMPT.md  EXPANSION_PLAN.md  GUIDE_AR.md  MIGRATION_PLAN.md  TASK_PROMPT.md  ux-restructure-plan.md
scripts/: _fix_stone_discovery.py  _validate_all.py  analyze_clip_scores.py  analyze_model.py  analyze_v1.py  annotate_with_gdino.py  audit_detector_data.py  audit_phase_a.py  build_expanded_sites.py  build_gardiner_data.py  build_heritage_sites.py  build_translation_index.py  build_write_corpus.py  check_flagged_labels.py  check_module_refs.py  check_screenshots.py  clip_audit_classification.py  clip_clean_merged.py  clip_filter_images.py  convert_hla_to_yolo.py  convert_py_to_ipynb.py  copy_assets.py  create_landmark_sim.py  create_stone_textures.py  debug_crops.py  deploy_new_models.py  eval_translation.py  evaluate_conf_threshold.py  final_sweep.py  fix_both_notebooks.py  fix_callback_placement.py  (+32 more)
(+627 files in other folders)
