[project]
name = "wadjet-v2"
version = "2.0.0"
description = "AI-powered Egyptian heritage app — scan hieroglyphs, translate inscriptions, explore landmarks"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nader El-Akany" }]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
