[project]
name = "wadjet"
version = "3.0.0-beta"
description = "AI-powered Egyptian heritage app — scan hieroglyphs, translate inscriptions, explore landmarks"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Nader El-Akany" }]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
source = ["app"]
